--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
-
+import Navigation from '../components/Navigation.astro';
+const pageTitle = "My Astro Site";
 ---
 
 <html lang="en">
@@ -11,9 +12,7 @@
 		<title>Astro</title>
 	</head>
 	<body>
-		<h1>My Astro Site</h1>
-		<a href="/">Home</a>
-		<a href="/about/">About</a>
-		<a href="/blog/">Blog</a>
+		<h1>{pageTitle}</h1>
+		<Navigation />
 	</body>
 </html>
