--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import Navigation from '../components/Navigation.astro';
+import Footer from '../components/Footer.astro';
 const pageTitle = "My Astro Site";
 ---
 
@@ -14,5 +15,6 @@ const pageTitle = "My Astro Site";
 	<body>
 		<h1>{pageTitle}</h1>
 		<Navigation />
+		<Footer />
 	</body>
 </html>
