--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,5 +1,6 @@
 ---
-import Navigation from '../components/Navigation.astro';
+import "../styles/global.css";
+import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 const pageTitle = "My Astro Learning Blog";
 ---
@@ -10,7 +11,7 @@ const pageTitle = "My Astro Learning Blog";
     <title>Astro</title>
   </head>
   <body>
-    <Navigation />
+    <Header />
 
     <h1>{pageTitle}</h1>
     <p>This is where I will post about my journey learning Astro.</p>
@@ -20,5 +21,8 @@ const pageTitle = "My Astro Learning Blog";
       <li><a href="/posts/post-3/">Post 3</a></li>
     </ul>
     <Footer />
+    <script>
+			import "../scripts/menu.js";
+		</script>	
   </body>
 </html>
