--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,11 +2,13 @@
 import "../styles/global.css";
 import Navigation from "./Navigation.astro";
 import Hamburger from "./Hamburger.astro";
+import ThemeIcon from "./ThemeIcon.astro";
 ---
 
 <header>
   <nav>
     <Hamburger />
     <Navigation />
+    <ThemeIcon />
   </nav>
 </header>
